--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"build:esm": "npx tsc && cross-env ESM=true npx webpack --mode=production",
 		"preview": "npm run start-preview",
 		"start-dev": "cross-env MAX_WORKERS=4 node -r sucrase/register server/src/index.ts & cross-env PORT=3000 IO_PORT=3030 npx webpack serve --mode=development",
-		"start-preview": "cross-env ENV=production CLUSTER_INSTANCES=2 MAX_WORKERS=7 npm run pm2-puppeteer-ssr & cross-env PORT=1234 NODE_NO_WARNINGS=1 node ./config/webpack.serve.config.js",
+		"start-preview": "cross-env ENV=production CLUSTER_INSTANCES=1 MAX_WORKERS=7 npm run pm2-puppeteer-ssr & cross-env PORT=1234 NODE_NO_WARNINGS=1 node ./config/webpack.serve.config.js",
 		"pm2-puppeteer-ssr": "node --require sucrase/register server/src/puppeteer-ssr/pm2.ts",
 		"start-puppeteer-ssr": "cross-env PUPPETEER_SSR_PORT=8080 npx pm2 -i 1 --silent start npm --name \"start-puppeteer-ssr\" -- run pm2-puppeteer-ssr",
 		"prettier": "prettier src/**/*.{t,j}s{,x} --no-error-on-unmatched-pattern --check",
@@ -26,16 +26,6 @@
 		"last 2 versions",
 		"not dead"
 	],
-	"overrides": {
-		"tsconfig-paths@*": "$tsconfig-paths"
-	},
-	"workspaces": [
-		"server",
-		"server/src/puppeteer-ssr",
-		"config/commit-packages",
-		"config/lint-and-format-packages",
-		"config/build-tool-packages"
-	],
 	"dependencies": {
 		"polished": "^4.2.2",
 		"react": "^18.2.0",
@@ -44,8 +34,10 @@
 		"styled-components": "^6.0.2"
 	},
 	"devDependencies": {
-		"tsconfig-paths": "^4.2.0",
-		"webpack-cli": "^5.1.4"
+		"server": "file:./server",
+		"commit-packages": "file:./config/commit-packages",
+		"lint-and-format-packages": "file:./config/lint-and-format-packages",
+		"build-tool-packages": "file:./config/build-tool-packages"
 	},
 	"eslintConfig": {
 		"extends": [
