--- a/config/build-tool-packages/package.json
+++ b/config/build-tool-packages/package.json
@@ -42,6 +42,7 @@
 		"unplugin-auto-import": "^0.16.5",
 		"webpack": "^5.88.1",
 		"webpack-cli": "^5.1.4",
-		"webpack-dev-server": "^4.15.1"
+		"webpack-dev-server": "^4.15.1",
+		"typescript": "^5.2.2"
 	}
 }
