--- a/config/commit-packages/package.json
+++ b/config/commit-packages/package.json
@@ -6,11 +6,11 @@
 	"scripts": {},
 	"author": "",
 	"license": "ISC",
-	"devDependencies": {
+	"dependencies": {
 		"@commitlint/config-conventional": "^17.6.6",
 		"commitizen": "^4.3.0",
 		"commitlint": "^17.6.6",
-    "cz-git": "^1.6.1",
-    "husky": "^8.0.3"
+		"cz-git": "^1.6.1",
+		"husky": "^8.0.3"
 	}
 }
