--- a/config/lint-and-format-packages/package.json
+++ b/config/lint-and-format-packages/package.json
@@ -6,7 +6,7 @@
 	"scripts": {},
 	"author": "",
 	"license": "ISC",
-	"devDependencies": {
+	"dependencies": {
 		"eslint": "^8.44.0",
 		"eslint-config-airbnb": "^19.0.4",
 		"eslint-config-airbnb-typescript": "^17.0.0",
@@ -19,6 +19,6 @@
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"espree": "^9.6.0",
 		"lint-staged": "^13.2.3",
-    "prettier": "^2.8.8"
+		"prettier": "^2.8.8"
 	}
 }
