--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,7 @@
 		"express": "^4.18.2",
 		"cors": "^2.8.5",
 		"pm2": "^5.3.0",
-		"workerpool": "^6.4.0"
-	},
-	"devDependencies": {
+		"workerpool": "^6.4.0",
 		"puppeteer-ssr": "file:./src/puppeteer-ssr"
 	}
 }
