--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
 	"scripts": {
 		"start": "cross-env ENV=production MAX_WORKERS=2 CLUSTER_INSTANCES=1 npm run pm2-puppeteer-ssr",
 		"dev": "cross-env ENV=development npm run start-dev",
+		"dev:fastify": "cross-env ENV=development npm run start-dev:fastify",
 		"build": "npx webpack --mode=production",
 		"build:esm": "npx tsc && cross-env ESM=true npx webpack --mode=production",
 		"preview": "npm run start-preview",
-		"start-dev": "cross-env MAX_WORKERS=4 node -r sucrase/register server/src/index.ts & cross-env PORT=3000 IO_PORT=3030 npx webpack serve --mode=development",
-		"start-preview": "cross-env ENV=production CLUSTER_INSTANCES=1 MAX_WORKERS=7 npm run pm2-puppeteer-ssr & cross-env PORT=1234 NODE_NO_WARNINGS=1 node ./config/webpack.serve.config.js",
+		"preview:fastify": "npm run start-preview:fastify",
+		"start-dev": "cross-env MAX_WORKERS=4 node -r sucrase/register server/src/index.ts",
+		"start-dev:fastify": "cross-env MAX_WORKERS=4 node -r sucrase/register server/src/index.fastify.ts",
+		"start-preview": "cross-env MAX_WORKERS=7 node -r sucrase/register server/src/index.ts",
+		"start-preview:fastify": "cross-env MAX_WORKERS=7 node -r sucrase/register server/src/index.fastify.ts",
 		"pm2-puppeteer-ssr": "node --require sucrase/register server/src/puppeteer-ssr/pm2.ts",
 		"start-puppeteer-ssr": "cross-env PUPPETEER_SSR_PORT=8080 npx pm2 -i 1 --silent start npm --name \"start-puppeteer-ssr\" -- run pm2-puppeteer-ssr",
 		"prettier": "prettier src/**/*.{t,j}s{,x} --no-error-on-unmatched-pattern --check",
