--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
 		"start": "cross-env ENV=production MAX_WORKERS=2 CLUSTER_INSTANCES=1 npm run pm2-puppeteer-ssr",
 		"dev": "cross-env ENV=development npm run start-dev",
 		"dev:fastify": "cross-env ENV=development npm run start-dev:fastify",
+		"dev:uws": "cross-env ENV=development npm run start-dev:uws",
 		"build": "npx webpack --mode=production",
 		"build:esm": "npx tsc && cross-env ESM=true npx webpack --mode=production",
 		"preview": "npm run start-preview",
 		"preview:fastify": "npm run start-preview:fastify",
+		"preview:uws": "npm run start-preview:uws",
 		"start-dev": "cross-env MAX_WORKERS=4 node -r sucrase/register server/src/index.ts",
 		"start-dev:fastify": "cross-env MAX_WORKERS=4 node -r sucrase/register server/src/index.fastify.ts",
-		"start-preview": "cross-env MAX_WORKERS=7 node -r sucrase/register server/src/index.ts",
+		"start-dev:uws": "cross-env MAX_WORKERS=4 node -r sucrase/register server/src/index.uws.ts",
+		"start-preview": "cross-env MAX_WORKERS=7 node -r sucrase/register server/src/index.uws.ts",
 		"start-preview:fastify": "cross-env MAX_WORKERS=7 node -r sucrase/register server/src/index.fastify.ts",
-		"pm2-puppeteer-ssr": "node --require sucrase/register server/src/puppeteer-ssr/pm2.ts",
+		"start-preview:uws": "cross-env MAX_WORKERS=7 node -r sucrase/register server/src/index.uws.ts",
+		"pm2-puppeteer-ssr": "node --require sucrase/register server/src/puppeteer-ssr/pm2.uws.ts",
 		"start-puppeteer-ssr": "cross-env PUPPETEER_SSR_PORT=8080 npx pm2 -i 1 --silent start npm --name \"start-puppeteer-ssr\" -- run pm2-puppeteer-ssr",
 		"prettier": "prettier src/**/*.{t,j}s{,x} --no-error-on-unmatched-pattern --check",
 		"lint": "npx tsc && eslint src/**/*.{t,j}s{,x} --no-error-on-unmatched-pattern --ignore-pattern node_modules/",
