--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
 		"prepare": "git config core.autocrlf false && npx husky install",
 		"preinstall": "node server/src/utils/GenerateServerInfo.js && node server/src/puppeteer-ssr/utils/CreatePuppeteerConfigFile.js"
 	},
+	"engines": {
+		"node": "18.18.x"
+	},
 	"browserslist": [
 		"> 1%",
 		"last 2 versions",
