--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"private": true,
 	"scripts": {
-		"start": "cross-env MAX_WORKERS=4 node -r sucrase/register server/src/index.uws.ts",
+		"start": "cross-env ENV=production MAX_WORKERS=4 node -r sucrase/register server/src/index.fastify.ts",
 		"start:pm2": "cross-env ENV=production MAX_WORKERS=4 CLUSTER_INSTANCES=7 npm run pm2-puppeteer-ssr",
 		"dev": "cross-env ENV=development npm run start-dev",
 		"dev:fastify": "cross-env ENV=development npm run start-dev:fastify",
