--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"private": true,
 	"scripts": {
-		"start:pm2": "cross-env ENV=production MAX_WORKERS=4 CLUSTER_INSTANCES=3 npm run pm2-puppeteer-ssr",
+		"start": "cross-env ENV=production MAX_WORKERS=4 CLUSTER_INSTANCES=3 npm run pm2-puppeteer-ssr",
 		"dev": "cross-env ENV=development npm run start-dev",
 		"dev:fastify": "cross-env ENV=development npm run start-dev:fastify",
 		"dev:uws": "cross-env ENV=development npm run start-dev:uws",
