--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
 	"private": true,
 	"scripts": {
-		"start": "npx cross-env ENV=production MAX_WORKERS=7 CLUSTER_INSTANCES=1 npm run pm2-puppeteer-ssr",
+		"start": "npx cross-env MAX_WORKERS=7 node -r sucrase/register server/src/index.uws.ts",
+		"start:pm2": "npx cross-env ENV=production MAX_WORKERS=7 CLUSTER_INSTANCES=1 npm run pm2-puppeteer-ssr",
 		"dev": "cross-env ENV=development npm run start-dev",
 		"dev:fastify": "cross-env ENV=development npm run start-dev:fastify",
 		"dev:uws": "cross-env ENV=development npm run start-dev:uws",
