--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"private": true,
 	"scripts": {
-		"start": "npx cross-env ENV=production MAX_WORKERS=7 node -r sucrase/register server/dist/index.uws.js",
+		"start": "npx cross-env ENV=production MAX_WORKERS=7 node server/dist/index.uws.js",
 		"start:pm2": "npx cross-env ENV=production MAX_WORKERS=7 CLUSTER_INSTANCES=1 npm run pm2-puppeteer-ssr",
 		"dev": "cross-env ENV=development npm run start-dev",
 		"dev:fastify": "cross-env ENV=development npm run start-dev:fastify",
