--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,6 @@
-DISABLE_SSR_CACHE=true
-DISABLE_COMPRESS_HTML=true
+PLATFORM=win32
+HOSTNAME=PC-TruongNguyen
+ADDRESS=fe80::bcb7:f8ec:b159:77a9
 DISABLE_OPTIMIZE=true
+DISABLE_COMPRESS_HTML=true
+DISABLE_SSR_CACHE=true
