update(other): :jigsaw: update
improve http comrpession feature

--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,5 @@ config/utils/PortHandler/.env
 server/**/server-info.json
 server/**/user_data*
 server/**/.cache
-server/**/utils/Cache.worker/pages/*.html
+server/**/utils/Cache.worker/pages/*
 .cache
