--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"private": true,
 	"scripts": {
-		"start": "npx cross-env ENV=production MAX_WORKERS=7 node server/dist/index.uws.js",
-		"start:pm2": "npx cross-env ENV=production MAX_WORKERS=7 CLUSTER_INSTANCES=1 npm run pm2-puppeteer-ssr:uws",
+		"start": "npm run server-build && npx cross-env ENV=production MAX_WORKERS=7 node server/dist/index.uws.js",
+		"start:pm2": "npm run server-build && npx cross-env ENV=production MAX_WORKERS=7 CLUSTER_INSTANCES=1 npm run pm2-puppeteer-ssr:uws",
 		"dev": "cross-env ENV=development npm run start-dev",
 		"dev:fastify": "cross-env ENV=development npm run start-dev:fastify",
 		"dev:uws": "cross-env ENV=development npm run start-dev:uws",
