--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 PLATFORM=win32
 HOSTNAME=PC-TruongNguyen
 ADDRESS=fe80::bcb7:f8ec:b159:77a9
-DISABLE_OPTIMIZE=true
-DISABLE_COMPRESS_HTML=true
+DISABLE_COMPRESS_HTML=TRUE
+DISABLE_OPTIMIZE=TRUE
