update(other): :jigsaw: update
update ServerConfig options

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,4 @@
 PLATFORM=win32
 HOSTNAME=PC-TruongNguyen
 ADDRESS=fe80::bcb7:f8ec:b159:77a9
-DISABLE_COMPRESS_HTML=TRUE
-DISABLE_OPTIMIZE=TRUE
+MAX_WORKERS=4
