update(server): :jigsaw: update
- update logic to handle puppeteer cache path
- update logic to handle crawl and cache device of content

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
-PLATFORM=win32
-HOSTNAME=PC-TruongNguyen
-ADDRESS=fe80::bcb7:f8ec:b159:77a9
+PLATFORM=darwin
+HOSTNAME=Nguyens-MacBook-Pro-5.local
+ADDRESS=::1
 MAX_WORKERS=4
 CRAWLER=http://localhost:8084
