--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,13 @@
 {
 	"version": 2,
 	"env": {
-		"MAX_WORKERS": "2",
-		"DURATION_TIMEOUT": "10000",
-		"DISABLE_COMPRESS_HTML": "true",
-		"POWER_LEVEL": "2",
-		"BANDWIDTH_LEVEL": "1",
-		"SERVER_LESS": "true"
+		"PUPPETEER_SKIP_DOWNLOAD": "true",
+		"DISABLE_DETECT_LOCALE": "true",
+		"CRAWLER": "https://on-ferret-above.ngrok-free.app"
 	},
 	"builds": [
 		{
 			"src": "package.json",
-			"use": "@vercel/node"
-		},
-		{
-			"src": "server/src/puppeteer-ssr/utils/GenerateExecutablePath.js",
 			"use": "@vercel/node"
 		},
 		{
