--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,8 @@
 	"env": {
 		"PUPPETEER_SKIP_DOWNLOAD": "true",
 		"DISABLE_DETECT_LOCALE": "true",
+		"DISABLE_COMPRESS_HTML": "true",
+		"DISABLE_DEEP_OPTIMIZE": "true",
 		"CRAWLER": "https://on-ferret-above.ngrok-free.app"
 	},
 	"builds": [
